--- a/src/components/Patreon/Patreon.css
+++ b/src/components/Patreon/Patreon.css
@@ -1,4 +1,5 @@
 .patreon-position-1 {
+  user-select: none;
   position: absolute;
   width: 100%;
   height: 1150px;
@@ -18,6 +19,7 @@
 }
 
 .patreon-box {
+  user-select: none;
   height: 220px;
   position: absolute;
   color: white;
@@ -26,6 +28,7 @@
   margin-left: 46.1%;
 }
 .patreon-image {
+  user-select: none;
   position: absolute;
   color: white;
   z-index: 4;
